# flagright-python

./: .fernignore  README.md  pyproject.toml  reference.md
.github/workflows/: ci.yml
src/flagright/: __init__.py  client.py  environment.py  version.py
src/flagright/batch/: client.py  raw_client.py
src/flagright/business_user_events/: client.py  raw_client.py
src/flagright/business_users/: __init__.py  client.py  raw_client.py
src/flagright/consumer_user_events/: client.py  raw_client.py
src/flagright/consumer_users/: __init__.py  client.py  raw_client.py
src/flagright/core/: client_wrapper.py
src/flagright/errors/: __init__.py  bad_request_error.py  conflict_error.py  not_found_error.py  too_many_requests_error.py  unauthorized_error.py
src/flagright/resources/: __init__.py
src/flagright/transaction_events/: client.py  raw_client.py
src/flagright/transactions/: __init__.py  client.py  raw_client.py
src/flagright/types/: __init__.py  ach_details.py  ach_payment_method.py  acquisition_channel.py  address.py  adverse_media_status.py  alert_closed_details.py  alert_opened_details.py  alert_status_details.py  amount.py  api_error_response.py  batch_business_user_event_with_rules_result.py  batch_business_user_events_with_rules_result.py  batch_business_user_with_rules_result.py  batch_business_user_with_rules_result_associated_parties_item.py  batch_business_user_with_rules_result_directors_item.py  batch_business_user_with_rules_result_saved_payment_details_item.py  (+253 more)
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+26 files in other folders)
