[tool.poetry]
name = "flagright"
version = "0.1.2"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "flagright", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.2"
httpx = "0.23.3"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
